feat(product): add is_decaf filter and change default product sorting to price
