# src/main/java/com/zufar/icedlatte/product/endpoint/ProductsEndpoint.java
@@ -68,14 +68,15 @@ public class ProductsEndpoint implements com.zufar.icedlatte.openapi.product.api
             @RequestParam(name = "brand_names", required = false) List<String> brandNames,
             @RequestParam(name = "seller_names", required = false) List<String> sellerNames,
             @RequestParam(name = "keyword", required = false) String keyword,
-            @RequestParam(name = "origin_country", required = false) String originCountry) {
+            @RequestParam(name = "origin_country", required = false) String originCountry,
+            @RequestParam(name = "is_decaf", required = false) Boolean isDecaf) {
 
         getProductsRequestValidator.validate(pageNumber, pageSize, sortAttribute, sortDirection,
                 minPrice, maxPrice, minimumAverageRating, brandNames, sellerNames);
 
         return ResponseEntity.ok(pageableProductsProvider.getProducts(
                 pageNumber, pageSize, sortAttribute, sortDirection,
-                minPrice, maxPrice, minimumAverageRating, brandNames, sellerNames, keyword, originCountry));
+                minPrice, maxPrice, minimumAverageRating, brandNames, sellerNames, keyword, originCountry, isDecaf));
     }
 
     @Override
